[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[project]
name = "autoimport_core"
version = "0.1.0"
authors = [
    { name = "bageljr", email = "bageljr897@protonmail.com" },
]
maintainers = [
    { name = "bageljr", email = "bageljr897@protonmail.com" },
]
license = { file = "LICENSE" }

description = "Provide autoimport suggestions."
readme = "README.md"

requires-python = ">=3.7, < 3.12"

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 1 - Planning",
]

dependencies = [
    "typing_extensions >=3.7; python_version<'3.8'",
    "pytoolconfig>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest >=6",
]
dev = [
    "pytest >=6",
    "nox>=2022.1.7",
]
docs = [
    "Sphinx>=4.0",
     "myst_parser>=0.13",
    "sphinx-book-theme>=0.1.0",
    "sphinx_copybutton",
]

[project.urls]
homepage = "https://github.com/bageljrkhanofemus/autoimport-core"


[tool.pdm.dev-dependencies]
devtest = ["pytest"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
]


[tool.mypy]
files = "src"
python_version = "3.7"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[tool.isort]
profile = "black"


[tool.pylint]
master.py-version = "3.7"
master.ignore-paths= ["src/autoimport_core/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
]
